# Embeded-utils

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  histogram.c  histogram.h  main.c
Histogram/: .clang-format  CMakeLists.txt  histogram.c  histogram.h
Histogram/src/: histogram.c  histogram.h
Histogram/test/: test_histogram.c
